--- a/index.pug
+++ b/index.pug
@@ -7,14 +7,21 @@ html
 		title Second Project
 		link(rel="stylesheet", type="text/css", href="styles/style.css")
 	body
-		#wrapper
-			header#header
+		header#header
+			.green-line
 			.container
-				.phone
-				.content
+				nav
+					.logo indipixel
+					ul
+						li
+							a contact us
+
+		.container
+			.phone
+			.content
 		footer(id="footer")
-			.copyright &copy; 2015 Indipixel design
+			.copyright &copy; 2015 Indipixel design 
 			.contact 
 				img(src="images/Mail_icon.png") 
-				| contact@yourmail.com
+				.email contact@yourmail.com
 
