--- a/styles/style.css
+++ b/styles/style.css
@@ -1,57 +1,109 @@
 @font-face {
   font-family: Montserrat;
-  src: local("Montserrat"), url("fonts/Montserrat-Regular.woff") format("woff"), url("fonts/Montserrat-Regular.ttf") format("truetype"), url("fonts/Montserrat-Regular.svg") format("svg");
-  font-weight: normal; }
+  src: local('Montserrat'), url("fonts/Montserrat-Regular.woff") format('woff'), url("fonts/Montserrat-Regular.ttf") format('truetype'), url("fonts/Montserrat-Regular.svg") format('svg');
+  font-weight: normal;
+}
 @font-face {
   font-family: Montserrat;
-  src: local("Montserrat"), url("fonts/Montserrat-Bold.woff") format("woff"), url("fonts/Montserrat-Bold.ttf") format("truetype"), url("fonts/Montserrat-Bold.svg") format("svg");
-  font-weight: bold; }
+  src: local('Montserrat'), url("fonts/Montserrat-Bold.woff") format('woff'), url("fonts/Montserrat-Bold.ttf") format('truetype'), url("fonts/Montserrat-Bold.svg") format('svg');
+  font-weight: bold;
+}
 @font-face {
   font-family: PTSansRegular;
-  src: local("PTSansRegular"), url("fonts/PT_Sans-Web-Regular.woff") format("woff"), url("fonts/PT_Sans-Web-Regular.ttf") format("truetype"), url("PT_Sans-Web-Regular.svg") format("svg");
-  font-weight: normal; }
+  src: local('PTSansRegular'), url("fonts/PT_Sans-Web-Regular.woff") format('woff'), url("fonts/PT_Sans-Web-Regular.ttf") format('truetype'), url("PT_Sans-Web-Regular.svg") format('svg');
+  font-weight: normal;
+}
 @font-face {
   font-family: PTSansRegular;
-  src: local("PTSansRegular"), url("fonts/PT_Sans-Web-Bold.woff") format("woff"), url("fonts/PT_Sans-Web-Bold.ttf") format("truetype"), url("PT_Sans-Web-Bold.svg") format("svg");
-  font-weight: bold; }
-/* General rules */
+  src: local('PTSansRegular'), url("fonts/PT_Sans-Web-Bold.woff") format('woff'), url("fonts/PT_Sans-Web-Bold.ttf") format('truetype'), url("PT_Sans-Web-Bold.svg") format('svg');
+  font-weight: bold;
+}
+/* -------- Genera part ----------*/
 html {
   width: 100%;
-  height: 100%; }
-
+  height: 100%;
+}
 * {
   padding: 0;
   margin: 0;
   border: 0;
   font-size: 100%;
   vertical-align: baseline;
-  box-sizing: border-box; }
-
+  box-sizing: border-box;
+}
 body {
   line-height: 1;
   width: 100%;
   height: 100%;
   font-family: Monserrat, sans-serif;
   font-size: 16px;
-  background: yellow; }
-
+  background: #ff0;
+}
 ul li {
-  list-style: none; }
-
+  list-style: none;
+}
 a {
-  text-decoration: none; }
-
-#wrapper {
-  min-height: 100%;
-  overflow: hidden; }
-
-#container {
-  width: 1200px;
-  margin: 0 auto; }
-
+  text-decoration: none;
+}
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+/* -------- Header part ----------*/
+.green-line {
+  width: 100%;
+  background: #04e4a2;
+  height: 22px;
+}
+#header {
+  background: #e94643;
+  height: 100px;
+}
+#header nav {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+#header nav .logo {
+  font-size: 2em;
+  color: #fff;
+  font-weight: bold;
+}
+#header nav ul a:hover {
+  text-decoration: underline;
+  color: #fdd835;
+}
+/* -------- Footer part ----------*/
 #footer {
-  height: 71px;
-  margin-top: -71px;
-  background: #FEFCF2; }
-
-/*# sourceMappingURL=style.css.map */
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: space-around;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  background: #fefcf2;
+  height: 73px;
+}
+#footer .copyright,
+#footer .contact {
+  -webkit-align-self: center;
+  -ms-flex-item-align: center;
+  align-self: center;
+}
+#footer .contact {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+#footer .contact img {
+  margin-right: 15px;
+}
