--- a/index.pug
+++ b/index.pug
@@ -9,19 +9,40 @@ html
 	body
 		header#header
 			.green-line
-			.container
-				nav
-					.logo indipixel
-					ul
-						li
-							a contact us
+			nav.positioner
+				.logo
+					h1 indipixel
+				ul
+					li
+						a contact us
 
-		.container
-			.phone
-			.content
+		main
+			.red
+				.positioner.container
+					.phone
+						.frame
+							img(src="images/phone_screen.png")
+					.content
+						.introduction
+							h2 we design and buils beautiful web &amp; mobile apps
+							p You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality. - Walt Disney
+							button Know more
+				.form
+					form
+						input(type="text", name="firstname", placeholder="First Name")
+						input(type="text", name="lastname", placeholder="Last Name")
+						input(type="email", name="email", placeholder="Email Address")
+						select(name="design")
+							option(value="option1") App Design
+							option(value="option2") Option 2
+						textarea(name="message", rows="7", cols="50") Type your quety here
+						input(type="submit", value="Send")
+
+
 		footer(id="footer")
-			.copyright &copy; 2015 Indipixel design 
-			.contact 
-				img(src="images/Mail_icon.png") 
-				.email contact@yourmail.com
+			.footer.positioner
+				.copyright &copy; 2015 Indipixel design 
+				.contact 
+					img(src="images/Mail_icon.png") 
+					.email contact@yourmail.com
 
