--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@ ul li {
 a {
   text-decoration: none;
 }
-.container {
+.positioner {
   max-width: 1200px;
   margin: 0 auto;
 }
@@ -58,52 +58,120 @@ a {
 #header {
   background: #e94643;
   height: 100px;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 #header nav {
+  width: 100%;
+  color: #fff;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-justify-content: space-between;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
+  -webkit-align-items: baseline;
+  -ms-flex-align: baseline;
+  align-items: baseline;
 }
 #header nav .logo {
   font-size: 2em;
-  color: #fff;
   font-weight: bold;
+  padding-left: 13%;
+}
+#header nav ul li {
+  text-transform: uppercase;
 }
 #header nav ul a:hover {
-  text-decoration: underline;
-  color: #fdd835;
+  border-bottom: 3px solid #fdd835;
 }
-/* -------- Footer part ----------*/
-#footer {
+/* -------- Main part ----------*/
+main .red {
+  background: #ef5350;
+  width: 100%;
+  height: 104vh;
+}
+main .container {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-justify-content: space-around;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
+}
+main .container .phone,
+main .container .content {
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+}
+main .container .content {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  color: #fff;
+}
+main .container .content h2 {
+  text-transform: uppercase;
+  font-size: 1.8em;
+  font-weight: normal;
+}
+main .container .content .introduction {
+  height: 104vh;
+}
+main .container .phone .frame {
+  position: relative;
+  background: url("../images/phone_frame.png") no-repeat;
+  width: 100%;
+  height: 100%;
+}
+main .container .phone .frame img {
+  position: absolute;
+  top: 115px;
+  left: 28px;
+}
+/* -------- Footer part ----------*/
+#footer {
   background: #fefcf2;
   height: 73px;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
 }
-#footer .copyright,
-#footer .contact {
+#footer .footer {
+  width: 100%;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex: 50%;
+  -ms-flex: 50%;
+  flex: 50%;
+}
+#footer .footer .copyright,
+#footer .footer .contact {
   -webkit-align-self: center;
   -ms-flex-item-align: center;
   align-self: center;
+  -webkit-flex: 50%;
+  -ms-flex: 50%;
+  flex: 50%;
 }
-#footer .contact {
+#footer .footer .copyright {
+  padding-left: 9%;
+}
+#footer .footer .contact {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
+  padding-left: 2%;
 }
-#footer .contact img {
-  margin-right: 15px;
+#footer .footer .contact img {
+  margin-right: 19px;
 }
