--- a/index.pug
+++ b/index.pug
@@ -17,26 +17,28 @@ html
 						a contact us
 
 		main
-			.red
-				.positioner.container
-					.phone
-						.frame
-							img(src="images/phone_screen.png")
-					.content
-						.introduction
-							h2 we design and buils beautiful web &amp; mobile apps
-							p You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality. - Walt Disney
-							button Know more
-				.form
-					form
-						input(type="text", name="firstname", placeholder="First Name")
-						input(type="text", name="lastname", placeholder="Last Name")
-						input(type="email", name="email", placeholder="Email Address")
-						select(name="design")
-							option(value="option1") App Design
-							option(value="option2") Option 2
-						textarea(name="message", rows="7", cols="50") Type your quety here
-						input(type="submit", value="Send")
+			.positioner.container
+				.phone
+					.frame
+						.screen
+				.content
+					.introduction
+						h2 we design and buils beautiful web &amp; mobile apps
+						p You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality. - Walt Disney
+						button Know more
+					.form
+						form
+							.input-section
+								input(type="text", name="firstname", placeholder="First Name")
+								input(type="text", name="lastname", placeholder="Last Name")
+								input(type="email", name="email", placeholder="Email Address")
+								select(name="design")
+									option(value="option1") App Design
+									option(value="option2") Option 2
+							.textarea
+								textarea(name="message", rows="7", cols="80") Type your query here
+							.submit
+								input(type="submit", value="Send" class="submit")
 
 
 		footer(id="footer")
