--- a/styles/style.css
+++ b/styles/style.css
@@ -35,9 +35,10 @@ body {
   line-height: 1;
   width: 100%;
   height: 100%;
-  font-family: Monserrat, sans-serif;
+  font-family: Montserrat, sans-serif;
   font-size: 16px;
-  background: #ff0;
+  background: #bdbdbd;
+  color: #fff;
 }
 ul li {
   list-style: none;
@@ -67,7 +68,6 @@ a {
 }
 #header nav {
   width: 100%;
-  color: #fff;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -86,15 +86,10 @@ a {
 #header nav ul li {
   text-transform: uppercase;
 }
-#header nav ul a:hover {
+#header nav ul li a {
   border-bottom: 3px solid #fdd835;
 }
 /* -------- Main part ----------*/
-main .red {
-  background: #ef5350;
-  width: 100%;
-  height: 104vh;
-}
 main .container {
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -105,37 +100,141 @@ main .container .content {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
 }
 main .container .content {
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+main .container .content .introduction {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  line-height: 1.15;
+  font-weight: normal;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  max-height: 104vh;
+  background: #ef5350;
+}
+main .container .content .introduction h2 {
+  text-transform: uppercase;
+  font-size: 1.8em;
+  margin-bottom: 5.2%;
+}
+main .container .content .introduction p {
+  font-size: 1.2em;
+  border-bottom: 1px dashed #bdbdbd;
+  padding-bottom: 5.5%;
+  margin-bottom: 5.5%;
+}
+main .container .content .introduction button {
+  -webkit-align-self: flex-end;
+  -ms-flex-item-align: flex-end;
+  align-self: flex-end;
+  text-transform: uppercase;
+  background: #69f0ae;
+  color: #fff;
+  font-size: 1.2em;
+  padding: 3.4% 5.5%;
+  border-radius: 5px;
+}
+main .container .content form {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+}
+main .container .content form .input-section {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+}
+main .container .content form .input-section input,
+main .container .content form .input-section select {
+  -webkit-flex-basis: 40%;
+  -ms-flex-basis: 40%;
+  flex-basis: 40%;
+  border-radius: 4px;
+  margin: 1.5% 0;
+  border: 2px solid #e3f2fd;
+}
+main .container .content form .input-section input {
+  padding: 15px 10px;
+}
+main .container .content form .input-section textarea {
+  padding: 15px 20px;
+  -webkit-flex: 100%;
+  -ms-flex: 100%;
+  flex: 100%;
+  border-radius: 5px;
+  margin: 1.5%;
+}
+main .container .content form .submit {
+  -webkit-align-self: flex-end;
+  -ms-flex-item-align: flex-end;
+  align-self: flex-end;
+}
+main .container .content form .submit input[type="submit"] {
+  background: #e94643;
+  height: 14px;
+  width: 55px;
   color: #fff;
 }
-main .container .content h2 {
-  text-transform: uppercase;
-  font-size: 1.8em;
-  font-weight: normal;
-}
-main .container .content .introduction {
-  height: 104vh;
+main .container .phone {
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 main .container .phone .frame {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   position: relative;
-  background: url("../images/phone_frame.png") no-repeat;
+  max-width: 388px;
   width: 100%;
   height: 100%;
+  max-height: 814px;
+  background: url("../images/phone_frame.png") no-repeat;
 }
-main .container .phone .frame img {
+main .container .phone .frame .screen {
   position: absolute;
+  z-index: 10;
+  max-width: 329px;
+  max-height: 583px;
   top: 115px;
   left: 28px;
+  width: 100%;
+  height: 100%;
+  background: url("../images/phone_screen.png") no-repeat;
 }
 /* -------- Footer part ----------*/
 #footer {
+  color: #000;
   background: #fefcf2;
   height: 73px;
   display: -webkit-flex;
@@ -156,9 +255,9 @@ main .container .phone .frame img {
   -webkit-align-self: center;
   -ms-flex-item-align: center;
   align-self: center;
-  -webkit-flex: 50%;
-  -ms-flex: 50%;
-  flex: 50%;
+  -webkit-flex: 40%;
+  -ms-flex: 40%;
+  flex: 40%;
 }
 #footer .footer .copyright {
   padding-left: 9%;
