--- a/index.pug
+++ b/index.pug
@@ -15,28 +15,32 @@ html
 				ul
 					li
 						a contact us
-
+		.red
+		.darker-line
+		.lighter-line
 		main
-			.positioner.container
+			.container.positioner
 				.phone
 					.frame
 						.screen
 				.content
 					.introduction
-						h2 we design and buils beautiful web &amp; mobile apps
+						h2 we design and build beautiful web &amp; mobile apps
 						p You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality. - Walt Disney
 						button Know more
 					.form
 						form
+							.form-caption Let's Talk
 							.input-section
 								input(type="text", name="firstname", placeholder="First Name")
 								input(type="text", name="lastname", placeholder="Last Name")
 								input(type="email", name="email", placeholder="Email Address")
-								select(name="design")
-									option(value="option1") App Design
-									option(value="option2") Option 2
+								.select-style
+									select(name="design")
+										option(value="option1") App Design
+										option(value="option2") Option 2
 							.textarea
-								textarea(name="message", rows="7", cols="80") Type your query here
+								textarea(name="message", rows="3", cols="80") Type your query here
 							.submit
 								input(type="submit", value="Send" class="submit")
 
@@ -45,6 +49,6 @@ html
 			.footer.positioner
 				.copyright &copy; 2015 Indipixel design 
 				.contact 
-					img(src="images/Mail_icon.png") 
+					.mail-icon 
 					.email contact@yourmail.com
 
