--- a/styles/style.css
+++ b/styles/style.css
@@ -8,16 +8,6 @@
   src: local('Montserrat'), url("fonts/Montserrat-Bold.woff") format('woff'), url("fonts/Montserrat-Bold.ttf") format('truetype'), url("fonts/Montserrat-Bold.svg") format('svg');
   font-weight: bold;
 }
-@font-face {
-  font-family: PTSansRegular;
-  src: local('PTSansRegular'), url("fonts/PT_Sans-Web-Regular.woff") format('woff'), url("fonts/PT_Sans-Web-Regular.ttf") format('truetype'), url("PT_Sans-Web-Regular.svg") format('svg');
-  font-weight: normal;
-}
-@font-face {
-  font-family: PTSansRegular;
-  src: local('PTSansRegular'), url("fonts/PT_Sans-Web-Bold.woff") format('woff'), url("fonts/PT_Sans-Web-Bold.ttf") format('truetype'), url("PT_Sans-Web-Bold.svg") format('svg');
-  font-weight: bold;
-}
 /* -------- Genera part ----------*/
 html {
   width: 100%;
@@ -57,13 +47,30 @@ a {
 #header {
   background: #e94643;
   height: 100px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   position: relative;
 }
 #header nav {
   width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
   justify-content: space-between;
 }
 #header nav .logo {
@@ -83,6 +90,12 @@ a {
 }
 /* -------- Main part ----------*/
 .red {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
   background: #ef5350;
   position: absolute;
   width: 100%;
@@ -90,46 +103,82 @@ a {
   z-index: -1;
 }
 .container {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: nowrap;
   z-index: 1;
   position: relative;
 }
-.container .content {
+.content {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0 58.2%;
+  -moz-box-flex: 1;
+  -moz-flex: 1 0 58.2%;
+  -ms-flex: 1 0 58.2%;
   flex: 1 0 58.2%;
   padding: 15.6% 4.2% 0 10.7%;
   height: 100%;
-  -moz-appearance: none;
-  appearance: none;
 }
-.container .content .introduction {
+.introduction {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  -moz-justify-content: center;
   justify-content: center;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
   flex-direction: column;
   line-height: 1.2;
   font-weight: normal;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
   align-items: center;
   max-height: 583px;
   height: 100%;
   padding-right: 3.5%;
   margin-bottom: 30%;
 }
-.container .content .introduction h2 {
+.introduction h2 {
   text-transform: uppercase;
   font-size: 1.8em;
   margin-bottom: 4.5%;
   color: #fff;
 }
-.container .content .introduction p {
+.introduction p {
   font-size: 1.2em;
   border-bottom: 1px dashed #e94643;
   padding-bottom: 5.5%;
   margin-bottom: 5.2%;
   color: #fff;
 }
-.container .content .introduction button {
+.introduction button {
+  -webkit-align-self: flex-end;
+  -moz-align-self: flex-end;
+  -ms-flex-item-align: end;
   align-self: flex-end;
   text-transform: uppercase;
   background: #69f0ae;
@@ -139,25 +188,38 @@ a {
   height: 53px;
   border-radius: 6px;
 }
-.container .content .form {
+.form {
   margin-bottom: 5.5%;
 }
-.container .content form {
+form {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-direction: normal;
+  -webkit-box-orient: vertical;
+  -webkit-flex-direction: column;
+  -moz-flex-direction: column;
+  -ms-flex-direction: column;
   flex-direction: column;
 }
-.container .content form .form-caption {
+.form-caption {
   color: #ef5350;
   font-size: 1.2em;
   padding: 1% 0 0 4.3%;
   margin-bottom: 1.5%;
 }
-.container .content form .textarea {
+.textarea {
+  -webkit-flex-basis: 100%;
+  -moz-flex-basis: 100%;
+  -ms-flex-preferred-size: 100%;
   flex-basis: 100%;
   margin-top: 1.8%;
   margin-bottom: 2.4%;
 }
-.container .content form .textarea textarea {
+.textarea textarea {
   padding: 13px 21px;
   border: 2px solid #e3f2fd;
   border-radius: 4px;
@@ -167,10 +229,13 @@ a {
   resize: none;
   color: rgba(99,99,99,0.57);
 }
-.container .content form .submit {
+.submit {
+  -webkit-align-self: flex-end;
+  -moz-align-self: flex-end;
+  -ms-flex-item-align: end;
   align-self: flex-end;
 }
-.container .content form .submit input[type="submit"] {
+.submit input[type="submit"] {
   background: #e94643;
   height: 45px;
   width: 120px;
@@ -179,12 +244,27 @@ a {
   border-radius: 8px;
   text-transform: uppercase;
 }
-.container .content form .input-section {
+.input-section {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
   flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
   justify-content: space-between;
 }
-.container .content form .input-section input {
+.input-section input {
+  -webkit-flex-basis: 48%;
+  -moz-flex-basis: 48%;
+  -ms-flex-preferred-size: 48%;
   flex-basis: 48%;
   border-radius: 4px;
   border: 2px solid #e3f2fd;
@@ -192,18 +272,29 @@ a {
   margin: 1.85% 0;
   color: #636363;
 }
-.container .content form .input-section input:nth-child(2),
-.container .content form .input-section select {
+.input-section input:nth-child(2),
+.input-section select {
   padding: 13px 35px;
 }
-.container .content form .input-section .select-style {
+.input-section .select-style {
+  -webkit-flex-basis: 48%;
+  -moz-flex-basis: 48%;
+  -ms-flex-preferred-size: 48%;
   flex-basis: 48%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
   padding: 1% 0;
   background: #fff url("../images/arrow.png") no-repeat 92% 52%;
 }
-.container .content form .input-section .select-style select {
+.input-section .select-style select {
   color: rgba(99,99,99,0.57);
+  -webkit-flex-basis: 100%;
+  -moz-flex-basis: 100%;
+  -ms-flex-preferred-size: 100%;
   flex-basis: 100%;
   border-radius: 4px;
   border: 2px solid #e3f2fd;
@@ -211,16 +302,40 @@ a {
   margin: 1.85% 0;
   background-color: transparent;
   -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
-.container .phone {
+.phone {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: end;
+  -ms-flex-pack: end;
+  -webkit-justify-content: flex-end;
+  -moz-justify-content: flex-end;
   justify-content: flex-end;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0 41.8%;
+  -moz-box-flex: 1;
+  -moz-flex: 1 0 41.8%;
+  -ms-flex: 1 0 41.8%;
   flex: 1 0 41.8%;
   margin-bottom: 2.6%;
 }
-.container .phone .frame {
+.frame {
   z-index: 9;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-align-self: center;
+  -moz-align-self: center;
+  -ms-flex-item-align: center;
   align-self: center;
   position: relative;
   max-width: 100%;
@@ -229,7 +344,7 @@ a {
   max-height: 100%;
   background: url("../images/phone_frame.png") no-repeat;
 }
-.container .phone .frame .screen {
+.screen {
   position: absolute;
   z-index: 10;
   max-width: 329px;
@@ -240,7 +355,7 @@ a {
   height: 100%;
   background: url("../images/phone_screen.png") no-repeat;
 }
-.container .phone .darker-line {
+.darker-line {
   position: absolute;
   border-bottom: 82px solid #04e4a2;
   border-left: 50px solid transparent;
@@ -252,7 +367,7 @@ a {
   z-index: 3;
   -webkit-transform: rotate(37.6deg);
 }
-.container .phone .lighter-line {
+.lighter-line {
   position: absolute;
   border-bottom: 82px solid #69f0ae;
   border-left: 50px solid transparent;
@@ -269,23 +384,55 @@ a {
   color: #000;
   background: #fefcf2;
   height: 73px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
 }
 #footer .footer {
   width: 100%;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0 50%;
+  -moz-box-flex: 1;
+  -moz-flex: 1 0 50%;
+  -ms-flex: 1 0 50%;
   flex: 1 0 50%;
 }
 #footer .footer .copyright,
 #footer .footer .contact {
+  -webkit-align-self: center;
+  -moz-align-self: center;
+  -ms-flex-item-align: center;
   align-self: center;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 0 40%;
+  -moz-box-flex: 1;
+  -moz-flex: 1 0 40%;
+  -ms-flex: 1 0 40%;
   flex: 1 0 40%;
 }
 #footer .footer .copyright {
   padding-left: 9.5%;
 }
 #footer .footer .contact {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -moz-box;
+  display: -moz-flex;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
   align-items: center;
   padding-left: 2.4%;
 }
@@ -295,24 +442,65 @@ a {
   height: 24px;
   margin-right: 19px;
 }
-@media screen and (min-width: 1145px) and (max-width: 1199px) {
+@media screen and (min-width: 1135px) and (max-width: 1199px) {
   .red {
     height: 48.7vw;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1144px) {
+@media screen and (min-width: 768px) and (max-width: 1134px) {
+  .red {
+    height: 53vw;
+  }
+  .phone {
+    display: none;
+  }
+  .introduction {
+    margin-bottom: 16%;
+  }
+}
+@media screen and (min-width: 400px) and (max-width: 767px) {
+  .red {
+    height: 85%;
+  }
   .container .phone {
     display: none;
   }
-}
-@media screen and (max-width: 767px) {
+  .container .content .introduction {
+    margin-bottom: 12%;
+  }
   .container .phone {
     display: none;
   }
   .form-caption,
-  .input-section,
-  .select-style,
-  .submit {
+  .input-section input,
+  .form .select-style,
+  .form .submit {
+    -webkit-flex-basis: 100%;
+    -moz-flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
+    flex-basis: 100%;
+  }
+}
+@media screen and (max-width: 399px) {
+  .red {
+    height: 60%;
+  }
+  .container .phone {
+    display: none;
+  }
+  .container .content .introduction {
+    margin-bottom: 12%;
+  }
+  .container .phone {
+    display: none;
+  }
+  .form-caption,
+  .input-section input,
+  .form .select-style,
+  .form .submit {
+    -webkit-flex-basis: 100%;
+    -moz-flex-basis: 100%;
+    -ms-flex-preferred-size: 100%;
     flex-basis: 100%;
   }
 }
